Hide h2 in versions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	.versiontext p, .versiontext .poetry {
 		display: inline;
 	}
-	.versiontext br, .versiontext h1, .versiontext h3 {
+	.versiontext br, .versiontext h1, .versiontext h2, .versiontext h3 {
 		display: none;
 	}
 	</style>
